sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: value asInstanceof is not a member of Int
      ecart=(ecart.asInstanceof[Double]/1.3).asInstanceOf[Int]
                   ^