sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart: Int =getNombreValeurs()
  var swapped: Boolean = true
  while ( ecart > 1 || swapped ) {
    swapped=false
    if (ecart>1){
      ecart=(ecart.asInstanceof[Double]/1.3).asInstanceOf[Int]
    }
    var i:Int=0
    while (i+ecart<getNombreValeurs()){
      if (plusPetit(i,i+1)==true){
        echange(i,i+1)
        swapped=true
        
      }
      i=i+1
    }
  } 
}